  See the editor's right mouse menu or tolls popup (ctrl+t).

Data compare: New submenu in SQL result's "Compare selected cells" menu
  which allows to compare cells to clipboard.

Refactoring: The DBDiff-Plugin's functionality was moved to SQuirreL's core.
  The DBDiff-Plugin won't be shipped anymore
  and in case it is still found it is programmatically kept from being loaded.

Bug fixes:

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/14
  The DB login dialog was missing the user name text field.
  The DB login dialog is shown when an Alias without auto logon is connected.

Fixed inconsistencies in DBDiff preferences tab,
  see menu Files --> Global Preferences --> tab "DB diff"



4.6.0 (06/04/2022)
==================

Enhancements:

Changed default of the "Quote identifiers in scripts" check box from checked to unchecked.
  See Global Preferences --> tab SQL Scripts
  This change concerns new installations only. For reference see discussion in bug #1506.

Change tracking: GIT revision dialog now offers to compare GIT revisions
  or to compare a GIT revisions to the local SQL editor.
  To open the GIT revisions dialog right click the SQL editor's left gutter.
  Note that the GIT revision dialog is available only when change tracking by GIT must be used.

Data compare / DBDiff Plugin:
  The compare dialog now offers to ignore case.

UI-Tables can now be sorted by multiple columns
  when the ctrl key is pressed while column headers are clicked.

Syntax Plugin:
  New option >>Quotes (' or ") are doubled / enclose selection<<:
  See menu File --> New Session Properties --> tab Syntax

New option to define if NULL values are sorted highest or lowest
  when tables are sorted by clicking column headers.
  See menu File --> New Session Properties --> tab General --> section Output

Data compare / DBDiff Plugin:
  The compare dialog now offers options to change the way differences are displayed.

Graph Plugin:
  Made resizing tables easier.
